--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,16 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
 	<head>
+		<meta property="og:title" content="Learn Cryptography">
+		<meta property="og:description" content="Website Simulasi proses Algoritma Kriptografi Simetris dan Asimetris!">
+		<meta property="og:image" content="/img/hero-bg.jpg">
+		<meta property="og:url" content="https://learn-cryptography.vercel.app/">
+		<meta property="og:type" content="website">
+
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Website Simulasi proses Algoritma Kriptografi Simetris dan Asimetris!">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
